lab2/task_star/namespace.yml
apiVersion: v1
kind: Namespace

metadata:
  name: webserver
  labels:
    app: webserver
