lab2/task_star/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: local-ingress
  namespace: webserver

spec:
  tls:
    - hosts:
        - minikube.webserver.ru
      secretName: webserver-tls

  rules:
    - host: minikube.webserver.ru
      http:
        paths:
          - path: /testpath
            pathType: Prefix
            backend:
              service:
                name: webserver-service
                port:
                  number: 8080
